--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ django-templated-mail==1.1.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.6.0
 djoser==2.1.0
+et-xmlfile==1.1.0
 gunicorn==20.1.0
 idna==2.10
 itypes==1.2.0
@@ -19,6 +20,7 @@ Jinja2==2.11.3
 MarkupSafe==1.1.1
 numpy==1.20.2
 oauthlib==3.1.0
+openpyxl==3.0.7
 pandas==1.2.4
 pycparser==2.20
 PyJWT==2.0.1
