--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ djangorestframework==3.12.4
 djangorestframework-simplejwt==4.6.0
 djoser==2.1.0
 et-xmlfile==1.1.0
+fuzzywuzzy==0.18.0
 gunicorn==20.1.0
 idna==2.10
 itypes==1.2.0
