--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3.7'
 
 services:
-#  ml:
-#    build:
-#      context: ./ml
-#    command: sh -c "uvicorn main:app --host 0.0.0.0 --port 8000"
-#    expose:
-#      - 8000
+  ml:
+    build:
+      context: ./ml
+    command: sh -c "uvicorn main:app --host 0.0.0.0 --port 5000"
+    expose:
+      - 5000
   backend:
     build:
       context: ./backend
@@ -26,26 +26,26 @@ services:
 #      - POSTGRES_USER=artway_user
 #      - POSTGRES_PASSWORD=P98KVAWdkmrgi324
 #      - POSTGRES_DB=artway_db
-#  frontend:
-#    build:
-#      context: ./frontend
-#    command: npm run-script build
-#    volumes:
-#      - frontend_build_folder:/frontend/build
-#    environment:
-#      - REACT_APP_PRODUCTION_URL=http://127.0.0.1/
+  frontend:
+    build:
+      context: ./frontend
+    command: npm run-script build
+    volumes:
+      - frontend_build_folder:/frontend/build
+    environment:
+      - REACT_APP_PRODUCTION_URL=http://127.0.0.1/
   nginx:
     build:
       context: ./nginx
     ports:
-      - 8000:8080
+      - 80:8080
     volumes:
-#      - frontend_build_folder:/var/www/frontend
+      - frontend_build_folder:/var/www/frontend
       - ./backend:/usr/src/em
     depends_on:
-#      - ml
+      - ml
       - backend
-#      - frontend
-#volumes:
-#  frontend_build_folder:
+      - frontend
+volumes:
+  frontend_build_folder:
 #  postgres_data:
