--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,14 +18,14 @@ services:
     environment:
       - DEBUG=True
       - SECRET_KEY=DJANGO_SECRET_KEY
-#  db:
-#    image: postgres:12.0-alpine
-#    volumes:
-#      - postgres_data:/var/lib/postgresql/data/
-#    environment:
-#      - POSTGRES_USER=artway_user
-#      - POSTGRES_PASSWORD=P98KVAWdkmrgi324
-#      - POSTGRES_DB=artway_db
+  db:
+    image: postgres:12.0-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=em_user
+      - POSTGRES_PASSWORD=P98KVAWdkmrgi324
+      - POSTGRES_DB=em_db
   frontend:
     build:
       context: ./frontend
@@ -48,4 +48,4 @@ services:
       - frontend
 volumes:
   frontend_build_folder:
-#  postgres_data:
+  postgres_data:
