--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,10 +13,6 @@ server {
 		alias /favicon.ico;
 	}
 
-#    location /api/ {
-#        proxy_pass http://aviaBackend$request_uri;
-#    }
-
     location /predict/ {
         proxy_pass http://emML;
     }
@@ -36,12 +32,12 @@ server {
         proxy_pass http://emBackend/admin/;
     }
 
-#	location /static_django/ {
-#		proxy_pass http://aviaBackend/static_django;
-#		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#		proxy_set_header Host $http_host;
-#		proxy_redirect off;
-#	}
+	location /static_django/ {
+		proxy_pass http://emBackend/static_django;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header Host $http_host;
+		proxy_redirect off;
+	}
 
 #    location ~* .(js|jpg|png|css)$ {
 #        root /usr/src/avia/static_django/;
