added ml module

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "frontend"]
 	path = frontend
 	url = https://github.com/RTUITLab/Energomach-Hack-2021-RealityGang-Front
+[submodule "ml"]
+	path = ml
+	url = https://github.com/RTUITLab/Energomach-Hack-2021-RealityGang-ML
