--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   ml:
     build:
       context: ./ml
-    command: sh -c "uvicorn main:app --host 0.0.0.0 --port 5000"
+    command: sh -c "uvicorn app.main:app --host 0.0.0.0 --port 5000"
     expose:
       - 5000
   backend:
